Update toolchain and dependents